syntax = "proto3";

option java_multiple_files = true;
option optimize_for = SPEED;
option java_package = "org.nemesis.grpc";
option java_outer_classname = "NemesisProto";
option objc_class_prefix = "API";

service Nemesis {
  rpc JoinGame(JoinRequest) returns (JoinReply);
  rpc GameStatus(StatusRequest) returns (StatusReply);
  rpc ChangeEconomy(ChangeEconomyRequest) returns (ChangeReply);
  rpc ChangeMilitary(ChangeMilitaryRequest) returns (ChangeReply);
  rpc ChangeDevense(ChangeDevenseRequest) returns (ChangeReply);
}

message JoinRequest {
  string username = 1;
  string password = 2;
}

message JoinReply {
  string token = 1;
}

message StatusRequest {
  string username = 1;
  string token = 2;
}

message StatusReply {
  repeated Player players = 1;
  repeated Region regions = 2;
}

message ChangeEconomyRequest {
  string username = 1;
  string token = 2;
  string location = 3;
  bool upgrad = 5;
  bool destroy = 6;
}

message ChangeDevenseRequest {
  string username = 1;
  string token = 2;
  string location = 3;
  bool upgrad = 5;
  bool destroy = 6;
}

message ChangeMilitaryRequest {
  string username = 1;
  string token = 2;
  string location = 3;
  string destination = 4;
  bool upgrad = 5;
  bool destroy = 6;
}

message ChangeReply {

}

message Player {
  string id = 1;
}

message Region {
  string id = 1;
  string type = 2;
  string owner = 3;
  int32 economy_development = 4;
  int32 devense_development = 5;
  int32 military_development = 6;
  int32 economy_maximum = 7;
  int32 devense_maximum = 8;
  int32 military_maximum = 9;
  double position_x = 10;
  double position_y = 11;
  double diameter = 12;
  string name = 13;
}